# speckit-agents

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.orchestrator  Dockerfile.responder  LICENSE  README.md  analyze_augment.py  config.yaml  docker-compose.yml  experiment_runner.py  mattermost_bridge.py  orchestrator.py  pyproject.toml  quality_evaluator.py  responder.py  run-tmux-3pane.sh  run-tmux.sh  run.sh  settings.json.backup  state_redis.py  swebench_runner.py  tool_augment.py  utils.py  worker.py  worker_pool.py
.claude/agents/: dev-agent.md  pm-agent.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
docs/: ARCHITECTURE.md  CONFIG.md  PRD.md  ROADMAP.md  SETUP.md  WORKFLOW.md
experiments/: NOTES.md  README.md  features.yaml
experiments/paper/: DRAFT_PAPER.md  FINAL_DRAFT_ACM_CAIS.md  abstract.md  outline.md  section1_introduction.md  section2_background.md  section3_architecture.md  section4_guardrails.md  section5_evaluation.md  section6_demonstration.md  sigconf-final.tex  sigconf.tex  update_abstract.py  update_tex.py  update_tex_remaining.py
experiments/results/: summary_20260221T084812.json  summary_20260222T032543.json  summary_20260222T074242.json  summary_20260222T165829.json  summary_20260222T185728.json  summary_20260222T192558.json  summary_20260222T233215.json  summary_20260223T002052.json  summary_20260223T032301.json  summary_20260223T175332.json  summary_20260224T020202.json  summary_20260224T095956.json
experiments/runner/: experiment_runner.py
experiments/scripts/: eval_one_by_one.py  human_preference_study.py
logs/augment/: run_test-run.jsonl
specs/001-feature-a/: spec.md
specs/004-redis-streams/: plan.md  quickstart.md  research.md  tasks.md
specs/005-phase-duration-summary/: plan.md  spec.md  tasks.md
specs/006-checkpoint-persistence/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-redis-streams/: data-model.md  plan.md  spec.md
src/auth/: __init__.py  config.py  database.py  dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
src/redis_streams/: __init__.py  checkpoint.py  connection.py  consumer.py  exceptions.py  models.py  monitoring.py  producer.py
src/scaling/: __init__.py  config.py  controller.py
src/slash_commands/: __init__.py  handlers.py  parser.py  registry.py
src/webhook/: __init__.py  (+3 more)
tests/: conftest.py  test_emoji_support.py  test_mattermost_bridge.py  test_orchestrator.py  test_parallel_workflows.py  test_redis_emoji.py  test_responder.py  test_tool_augment.py
(+214 files in other folders)
