[project]
name = "spec-kit-agent-team"
version = "0.1.0"
description = "PM + Developer agent team orchestrator with Mattermost via OpenClaw"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "redis>=5.0",
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require SSH access to mac-mini-i7.local and live Mattermost",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "mypy>=1.0",
    "ruff>=0.1",
]
