[project]
name = "spec-kit-agent-team"
version = "0.1.0"
description = "PM + Developer agent team orchestrator with Mattermost via OpenClaw"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "redis>=5.0",
    "anthropic>=0.25.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "python-multipart>=0.0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require SSH access to mac-mini-i7.local and live Mattermost",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "httpx>=0.24.0",
]
